Moved logo to docs, fixed logo not visible in light mode

--- a/src/Server/wwwroot/css/site.css
+++ b/src/Server/wwwroot/css/site.css
@@ -80,3 +80,7 @@ td.btn-group {
   display: revert;
   min-width: 15rem;
 }
+
+[data-bs-theme="light"] img[alt="Logo"] {
+  filter: invert(100%);
+}
